[package]
name = "moss"
version = "0.0.3"
authors = ["Finn <finn.bcd@gmail.com>"]
license = "CC0-1.0"

description = "Experimental Moss interpreter"
homepage = "https://johnbsmith.github.io/moss/home.htm"
repository = "https://github.com/JohnBSmith/moss"

[features]
# default = ["long-none"]
# default = ["long-none", "la", "math-la", "math-sf"]
default = ["long-gmp", "la", "math-la", "math-sf", "gx"]
la = []
math-la = []
math-sf = []
long-none = []
long-gmp = []
gx = []

[lib]
name = "moss"
path = "src/lib.rs"

[[bin]]
name = "moss"
path = "src/main.rs"
doc = false

[dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
termios = "0.2"

[profile.dev]
debug = true



